# formal-power-series

./: .gitignore  .gitmodules  FormalPowerSeries.cpp  FormalPowerSeries.h  ModCombinatorics.h  README.md  bundle.py  fps.hpp
.github/workflows/: main.yml
examples/: Makefile  constrained_tree_degree.cpp  count_subset_sums.cpp  diff_adjacent.cpp  stiring-first.cpp
examples/constrained-tree-degree/: README.md  solution.cpp
examples/count-subset-sums/: README.md  solution.cpp
examples/diff-adjacent/: README.md  solution.cpp
examples/k-inversions/: solution.cpp
examples/partition-number/: README.md  solution.cpp
examples/stirling-first/: README.md  solution.cpp
examples/stirling-number-first/: README.md  solution.cpp
examples/verifications/: bin_pow.cpp  exp.cpp  inverse.cpp  log.cpp  pow.cpp
test/: CMakeLists.txt  FormalPowerSeriesTest.cpp
verification/: Makefile  bin_pow.cpp  exp.cpp  inverse.cpp  log.cpp  pow.cpp
